<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.migoun.dorothy.miniweather.MainActivity">

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/seven_day"
        android:id="@+id/weekBt"
        android:onClick="sevenDay"
        android:clickable="true"
        android:layout_below="@+id/refreshBt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/refresh"
        android:id="@+id/refreshBt"
        android:clickable="true"
        android:onClick="refresh"
        android:layout_below="@+id/zipEdit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/units"
        android:id="@+id/unitSwitch"
        android:layout_alignTop="@+id/currentTemp"
        android:layout_toRightOf="@+id/currentTemp"
        android:layout_toEndOf="@+id/currentTemp"
        android:checked="false"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:showText="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_temperature"
        android:id="@+id/currentTemp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textSize="125sp" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/high"
        android:id="@+id/highLb"
        android:layout_below="@+id/currentTemp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/low"
        android:id="@+id/lowLb"
        android:layout_below="@+id/highLb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:textSize="24sp"
        android:layout_alignRight="@+id/highLb"
        android:layout_alignEnd="@+id/highLb" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/precip"
        android:id="@+id/precipLb"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lowLb" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/clouds"
        android:id="@+id/cloudLb"
        android:layout_below="@+id/precipLb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wind"
        android:id="@+id/windLb"
        android:layout_below="@+id/cloudLb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/humidity"
        android:id="@+id/hmLb"
        android:layout_below="@+id/windLb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/high"
        android:layout_below="@+id/currentTemp"
        android:layout_toRightOf="@+id/highLb"
        android:layout_toEndOf="@+id/highLb"
        android:textSize="24sp"
        android:text="@string/current_high" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/low"
        android:layout_below="@+id/high"
        android:layout_toRightOf="@+id/highLb"
        android:layout_toEndOf="@+id/lowLb"
        android:textSize="24sp"
        android:text="@string/current_low" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_precip"
        android:id="@+id/precip"
        android:textSize="24sp"
        android:layout_alignTop="@+id/precipLb"
        android:layout_toRightOf="@+id/lowLb"
        android:layout_toEndOf="@+id/lowLb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_clouds"
        android:id="@+id/cloud"
        android:layout_toEndOf="@+id/cloudLb"
        android:layout_toRightOf="@+id/cloudLb"
        android:layout_below="@+id/precip"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_wind"
        android:id="@+id/wind"
        android:layout_below="@+id/cloud"
        android:layout_toRightOf="@+id/windLb"
        android:layout_toEndOf="@+id/windLb"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_humidity"
        android:id="@+id/humidity"
        android:layout_below="@+id/wind"
        android:layout_toRightOf="@+id/hmLb"
        android:layout_toEndOf="@+id/hmLb"
        android:textSize="24sp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/zipEdit"
        android:textSize="24sp"
        android:layout_below="@+id/zipLb"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/zipLb" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ZIP"
        android:id="@+id/zipLb"
        android:textSize="24sp"
        android:layout_below="@+id/unitSwitch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/unitSwitch" />

</RelativeLayout>
